fixed single digit hours from not pulling local storage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">8:00 am </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="8"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="8a"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
@@ -44,7 +44,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">9:00 am </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="9"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="9a"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
@@ -53,7 +53,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">10:00 am </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="10"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="10a"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
@@ -62,7 +62,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">11:00 am </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="11"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="11a"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
@@ -71,7 +71,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">12:00 pm </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="12"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="12p"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
@@ -80,7 +80,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">1:00 pm </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="13"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="13p"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
@@ -89,7 +89,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">2:00 pm </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="14"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="14p"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
@@ -98,7 +98,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">3:00 pm </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="15"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="15p"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
@@ -107,7 +107,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">4:00 pm </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="16"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="16p"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
@@ -116,7 +116,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">5:00 pm </span>
           </div>
-          <textarea class="description form-control" aria-label="With textarea" id="17"></textarea>
+          <textarea class="description form-control" aria-label="With textarea" id="17p"></textarea>
           <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
         </div>
       </div>
